--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 IMPORTANTE:
 -- REVISAR MEDICO - VIEWS: CadastroUpdateView, nao esta funcionando;
 -- Adicionar função de "esqueci minha senha";
+-- Rever view index de accounts para que o usuario seja redirecionado ao seu perfil de acordo com o tipo de usuario;
+
